@@ -1,3 +1,9 @@
+Mon May 30 22:02:01 2016  Kazuki Yamaguchi  <k@rhe.jp>
+
+	* ext/openssl/ossl_asn1.c (time_to_time_t): Use NUM2TIMET() instead of
+	  NUM2LONG(). time_t may be larger than long.
+	  [ruby-core:45552] [Bug #6571]
+
 Mon May 30 21:15:37 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* string.c: Document current behavior for other case mapping methods
